Added product client that allows the client to access the api
