# pkg/entity/product.client.go
@@ -1,0 +1,6 @@
+package entity
+
+type ProductClient struct {
+	Product Product
+	Media   Media
+}
